--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">G:NO</string>
     <string name="g_no">G:NO</string>
     <string name="login">로그인</string>
+    <string name="howToLogin">발급받은 아이디와 비밀번호를 입력하세요</string>
 </resources>
